--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Navbar section -->
     <nav class="navbar">
-      <a href="" class="navbar__logo">SASS</a>
+      <a href="/" class="navbar__logo">SASS</a>
       <div class="navbar__bars">
         <i class="fas fa-bars"></i>
       </div>
@@ -22,7 +22,7 @@
         <a href="/" class="navbar__menu--links">Home</a>
         <a href="/" class="navbar__menu--links">Products</a>
         <a href="/" class="navbar__menu--links">Services</a>
-        <a href="/" class="navbar__menu--links">Sign up</a>
+        <a href="/" class="navbar__menu--links" id="button">Sign up</a>
       </div>
     </nav>
 
